# logsink-shim

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: release.yml
src/logsink_shim/: app.py
tests/: test_app.py
